# ghostbay

./: Cargo.toml  README.md  TODO.md  ghostbay.db
certs/: cert.pem  key.pem
crates/admin-ui/: Cargo.toml
crates/admin-ui/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  extractors.rs  handlers.rs  lib.rs  middleware.rs  responses.rs
crates/auth/: Cargo.toml
crates/auth/src/: keys.rs  lib.rs  policy.rs  sigv4.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs  migrations.rs  models.rs  repository.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  local.rs  traits.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  main.rs
data/api-test/: hello.txt
