[package]
name = "ghostbay-admin-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Placeholder for future web UI implementation
# Will likely use axum for serving static assets
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true

# Internal crates
ghostbay-catalog = { path = "../catalog" }

# Utilities
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true