[package]
name = "ghostbay-catalog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Database & persistence
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Observability
tracing.workspace = true

# Utilities
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true