[package]
name = "ghostbay-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core runtime
tokio.workspace = true
axum.workspace = true
hyper.workspace = true
tower.workspace = true
tower-http.workspace = true

# Internal crates
ghostbay-api = { path = "../api" }
ghostbay-auth = { path = "../auth" }
ghostbay-catalog = { path = "../catalog" }
ghostbay-engine = { path = "../engine" }

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI parsing
clap.workspace = true
color-eyre.workspace = true

# Configuration
toml.workspace = true
serde.workspace = true

# Utilities
anyhow.workspace = true